@@ -1,4 +1,5 @@
 Development
+	Add javascript src attribute
 	Fix for BBC radio to work
 	Turn off forcing of streaming for flash media
 	More work on realplayer emulation
